refacto and introduce translation

--- a/src/app/component/services-section/services-section.component.html
+++ b/src/app/component/services-section/services-section.component.html
@@ -1,12 +1,6 @@
 <div class="text-lg whitespace-break-spaces">
-    <div
-        class="text-3xl font-bold text-blue-600"
-        [ngClass]="{
-            'text-left': alignTitle === 'left',
-            'text-center': alignTitle === 'middle'
-        }"
-    >
-        {{ sectionTitle }}
+    <div class="text-3xl font-bold text-blue-600 text-center">
+        {{ sectionTitle | g2spTranslate }}
     </div>
 
     <ng-content></ng-content>
