--- a/src/app/page/temp-app/services/services.component.html
+++ b/src/app/page/temp-app/services/services.component.html
@@ -5,8 +5,14 @@
 
     <div class="px-24 w-full text-lg">
         <div class="mt-12">
-            <g2sp-services-section [sectionTitle]="'#Why' | g2spTranslate">
-                <div class="flex justify-center mt-20">
+            <g2sp-services-section
+                id="why"
+                [sectionTitle]="'#Why' | g2spTranslate"
+            >
+                <div
+                    class="flex justify-center mt-20"
+                    [@fadeIn]="isWhyVisible ? 'visible' : 'void'"
+                >
                     <g2sp-why-section
                         [description]="'#ServiceWhyCollabs' | g2spTranslate"
                         iconName="hub"
@@ -30,7 +36,9 @@
         <div class="mt-12">
             <g2sp-services-section [sectionTitle]="'#Simple' | g2spTranslate">
                 <div
+                    id="simple"
                     class="flex flex-col justify-center text-center mt-12 pl-16"
+                    [@fadeIn]="isSimpleVisible ? 'visible' : 'void'"
                 >
                     <g2sp-simple-section
                         [description]="'#ServiceSimpleState' | g2spTranslate"
@@ -50,20 +58,22 @@
             </g2sp-services-section>
         </div>
 
-        <div class="mt-12 h-96">
+        <div class="mt-12">
             <g2sp-services-section
                 [sectionTitle]="'#Competent' | g2spTranslate"
             >
-                <div class="mt-12 px-64 w-full">
+                <div
+                    class="h-96 mt-12 px-64 w-full mb-32"
+                    [@fadeIn]="isCompetentVisible ? 'visible' : 'void'"
+                >
                     <div class="w-full flex flex-col text-gray-600">
-                        <!-- carré global-->
                         <p class="text-center text-xl font-bold">
                             {{
                                 '#ServiceCompetentAccompagnement'
                                     | g2spTranslate
                             }}
                         </p>
-                        <div class="flex mt-12">
+                        <div class="flex mt-12" id="competent">
                             <g2sp-competent-section
                                 class="flex-auto"
                                 iconColor="text-green-700"
@@ -85,12 +95,14 @@
                                 iconName="engineering"
                                 [description]="'#Deployment' | g2spTranslate"
                             />
-                            <g2sp-competent-section
-                                class="flex-auto"
-                                iconColor="text-yellow-500"
-                                iconName="trending_up"
-                                [description]="'#Maturity' | g2spTranslate"
-                            />
+                            <div>
+                                <g2sp-competent-section
+                                    class="flex-auto"
+                                    iconColor="text-yellow-500"
+                                    iconName="trending_up"
+                                    [description]="'#Maturity' | g2spTranslate"
+                                />
+                            </div>
                         </div>
                     </div>
                 </div>
