--- a/src/app/component/services-section/simple-section/simple-section.component.html
+++ b/src/app/component/services-section/simple-section/simple-section.component.html
@@ -1,8 +1,22 @@
-<span class="flex justify-start items-center">
-    <mat-icon class="text-blue-500 scale-[300%] mr-8">
-        {{ iconName }}
-    </mat-icon>
-    <div>
-        {{ description }}
+<g2sp-services-section [sectionTitle]="'#Simple' | g2spTranslate">
+    <!--            [@fadeIn]="isSimpleVisible ? 'visible' : 'void'"-->
+    <div
+        id="simple"
+        class="flex flex-col justify-center text-center mt-12 pl-16"
+    >
+        <g2sp-simple-section-item
+            [description]="'#ServiceSimpleState' | g2spTranslate"
+            iconName="query_stats"
+        />
+        <g2sp-simple-section-item
+            class="mt-16"
+            [description]="'#ServiceSimpleTarget' | g2spTranslate"
+            iconName="ads_click"
+        />
+        <g2sp-simple-section-item
+            class="mt-16"
+            [description]="'#ServiceSimpleSized' | g2spTranslate"
+            iconName="group_3"
+        />
     </div>
-</span>
+</g2sp-services-section>
