--- a/src/app/component/services-section/why-section/why-section.component.html
+++ b/src/app/component/services-section/why-section/why-section.component.html
@@ -1,5 +1,8 @@
 <g2sp-services-section id="why" [sectionTitle]="'#Why' | g2spTranslate">
-    <div class="flex justify-center mt-20">
+    <div
+        class="flex justify-center mt-20"
+        [@fadeIn]="isSectionVisible ? 'visible' : 'void'"
+    >
         <g2sp-why-section-item
             [description]="'#ServiceWhyCollabs' | g2spTranslate"
             iconName="hub"
