--- a/src/app/component/services-section/simple-section/simple-section.component.html
+++ b/src/app/component/services-section/simple-section/simple-section.component.html
@@ -6,19 +6,19 @@
         <g2sp-simple-section-item
             [description]="'#ServiceSimpleState' | g2spTranslate"
             iconName="query_stats"
-            [@slideIn]="isSectionVisible ? 'visible' : 'void'"
+            [@slideIn200]="isSectionVisible ? 'visible' : 'void'"
         />
         <g2sp-simple-section-item
             class="mt-16"
             [description]="'#ServiceSimpleTarget' | g2spTranslate"
             iconName="ads_click"
-            [@slideInSlow]="isSectionVisible ? 'visible' : 'void'"
+            [@slideIn400]="isSectionVisible ? 'visible' : 'void'"
         />
         <g2sp-simple-section-item
             class="mt-16"
             [description]="'#ServiceSimpleSized' | g2spTranslate"
             iconName="group_3"
-            [@slideInVerySlow]="isSectionVisible ? 'visible' : 'void'"
+            [@slideIn800]="isSectionVisible ? 'visible' : 'void'"
         />
     </div>
 </g2sp-services-section>
