--- a/src/app/component/services-section/simple-section/simple-section-item/simple-section-item.component.html
+++ b/src/app/component/services-section/simple-section/simple-section-item/simple-section-item.component.html
@@ -1,8 +1,10 @@
-<span class="flex justify-start items-center">
-    <mat-icon class="text-blue-500 scale-[300%] mr-8">
-        {{ iconName }}
-    </mat-icon>
-    <div class="text-xl">
+<span class="flex ml-4">
+    <div class="text-center">
+        <mat-icon class="text-blue-600 scale-[200%]">
+            {{ iconName }}
+        </mat-icon>
+    </div>
+    <div class="ml-4 text-center text-sm">
         {{ description }}
     </div>
 </span>
