--- a/src/app/component/page-header/page-header.component.html
+++ b/src/app/component/page-header/page-header.component.html
@@ -1,9 +1,24 @@
-<div class="flex flex-col relative">
-    <img [src]="iconPath" alt="sécurité" class="shadow-xl shadow-gray-200" />
+<div class="flex flex-col justify-center relative h-screen">
+    <img
+        [src]="iconPath"
+        alt="sécurité"
+        class="absolute inset-0 w-full h-full object-cover shadow-xl shadow-gray-200"
+    />
 
-    <p
-        class="text-3xl font-bold text-white absolute bottom-28 left-6 text-center whitespace-break-spaces"
+    <span
+        class="z-10 font-bold text-3xl text-white absolute top-10 left-6 whitespace-break-spaces"
     >
-        Prenez un temps d’avance sur le prochain événement cyber-disruptif
-    </p>
+        <div>Prenez un temps d’avance</div>
+        <div>sur le prochain événement cyber-disruptif</div>
+    </span>
+    <div class="w-full flex justify-center relative -bottom-[35vh] opacity-50">
+        <button
+            (click)="handleExpandMoreClick()"
+            mat-fab
+            color="ter"
+            class="text-white scale-[1.5]"
+        >
+            <mat-icon class="scale-[2.5]"> expand_more </mat-icon>
+        </button>
+    </div>
 </div>
