--- a/src/app/component/services-section/why-section/why-section-item/why-section-item.component.html
+++ b/src/app/component/services-section/why-section/why-section-item/why-section-item.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col">
+<div class="flex ml-4">
     <div class="text-center">
-        <mat-icon class="text-blue-600 scale-[300%]">{{ iconName }}</mat-icon>
+        <mat-icon class="text-blue-600 scale-[200%]">{{ iconName }}</mat-icon>
     </div>
-    <div class="w-72 text-center mt-10 px-8 text-xl">
+    <div class="ml-4 text-center text-sm">
         {{ description }}
     </div>
 </div>
