--- a/src/app/page/temp-app/services/services.component.html
+++ b/src/app/page/temp-app/services/services.component.html
@@ -1,18 +1,18 @@
 <div class="flex flex-col justify-center">
-    <div class="mt-8 w-full self-center">
-        <g2sp-page-header iconPath="assets/secu5croped.jpg"></g2sp-page-header>
+    <div class="mt-1 w-full self-center">
+        <g2sp-page-header iconPath="assets/secu3.jpeg"></g2sp-page-header>
     </div>
 
-    <div class="px-24 w-full text-lg">
-        <div class="mt-24">
+    <div class="px-6 w-full">
+        <div class="mt-8">
             <g2sp-why-section />
         </div>
 
-        <div class="mt-24">
+        <div class="mt-8">
             <g2sp-simple-section />
         </div>
 
-        <div class="mt-24">
+        <div class="mt-8">
             <g2sp-competent-section />
         </div>
     </div>
