--- a/src/app/page/temp-app/temp-app.component.html
+++ b/src/app/page/temp-app/temp-app.component.html
@@ -1,5 +1,7 @@
-<g2sp-header></g2sp-header>
-<div class="mx-auto w-full h-full max-w-[1600PX]">
+<div class="header-test">
+    <g2sp-header class=""></g2sp-header>
+</div>
+<div class="mx-auto h-full max-w-[1600PX]">
     <div class="w-full">
         <router-outlet></router-outlet>
     </div>
