--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,8 +9,10 @@
 @tailwind utilities;
 html,
 body {
-    height: 100%;
+    height: auto;
+    width: 100%;
 }
+
 body {
     margin: 0;
     font-family: 'Nunito', sans-serif;
