improve logo integration

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -3,7 +3,7 @@
         <img
             (click)="handleClickLogo()"
             [src]="'assets/logo.svg'"
-            class="h-10 w-full"
+            class="h-12 w-full pr-2"
             alt="logo"
         />
     </div>
