fix button slide position and scroll hard 600px

--- a/src/app/component/page-header/page-header.component.html
+++ b/src/app/component/page-header/page-header.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center relative h-screen">
+<div id="g2sp-header" class="flex flex-col justify-center relative h-screen">
     <img
         [src]="iconPath"
         alt="sécurité"
@@ -11,7 +11,7 @@
         <div>Prenez un temps d’avance</div>
         <div>sur le prochain événement cyber-disruptif</div>
     </span>
-    <div class="w-full flex justify-center relative -bottom-[35vh] opacity-50">
+    <div class="w-full flex justify-center relative -bottom-[25vh] opacity-50">
         <button
             (click)="handleExpandMoreClick()"
             mat-fab
