--- a/src/app/component/page-header/page-header.component.html
+++ b/src/app/component/page-header/page-header.component.html
@@ -11,14 +11,14 @@
         <div>Prenez un temps d’avance</div>
         <div>sur le prochain événement cyber-disruptif</div>
     </span>
-    <div class="w-full flex justify-center relative -bottom-[25vh] opacity-50">
+    <div class="w-full flex justify-center relative -bottom-[35dvh] opacity-50">
         <button
             (click)="handleExpandMoreClick()"
             mat-fab
             color="ter"
-            class="text-white scale-[1.5]"
+            class="text-white scale-[1.2]"
         >
-            <mat-icon class="scale-[2.5]"> expand_more </mat-icon>
+            <mat-icon class="scale-[2.2]"> expand_more </mat-icon>
         </button>
     </div>
 </div>
