fix why section desktop css

--- a/src/app/component/header/header-item/header-item.component.html
+++ b/src/app/component/header/header-item/header-item.component.html
@@ -3,7 +3,7 @@
     [matRippleCentered]="true"
     [matRippleUnbounded]="false"
     (click)="handleClickCategory(categoryName)"
-    class="w-20 h-full flex justify-center items-center text-blue-600 hover:text-blue-500 transition duration-300 cursor-pointer font-bold text-sm"
+    class="w-20 sm:w-28 h-full flex justify-center items-center text-blue-600 hover:text-blue-500 transition duration-300 cursor-pointer font-bold text-sm sm:text-lg"
 >
     {{ categoryName }}
 </div>
