--- a/src/app/component/page-header/page-header.component.html
+++ b/src/app/component/page-header/page-header.component.html
@@ -2,11 +2,11 @@
     <img
         [src]="iconPath"
         alt="sécurité"
-        class="absolute inset-0 w-full h-full object-cover shadow-xl shadow-gray-200"
+        class="absolute inset-0 w-full h-[100dvh] object-cover shadow-sm shadow-gray-200"
     />
 
     <span
-        class="z-10 font-bold text-3xl text-white absolute top-10 left-6 whitespace-break-spaces"
+        class="z-10 font-bold text-4xl text-white absolute top-10 left-6 sm:left-64 whitespace-break-spaces"
     >
         <div>Prenez un temps d’avance</div>
         <div>sur le prochain événement cyber-disruptif</div>
