--- a/src/app/page/temp-app/temp-app.component.html
+++ b/src/app/page/temp-app/temp-app.component.html
@@ -1,4 +1,4 @@
-<div class="header-test">
+<div class="sticky top-0 z-50">
     <g2sp-header class=""></g2sp-header>
 </div>
 <div class="mx-auto h-full max-w-[1600PX]">
