--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,7 +7,9 @@
             alt="logo"
         />
     </div>
-    <nav class="flex-1 flex items-center justify-normal h-12">
+    <nav
+        class="flex-1 flex items-center justify-normal h-12 sm:space-x-12 sm:pl-12"
+    >
         <g2sp-header-item
             [categoryName]="PageId.SERVICES"
             class="h-14"
