--- a/src/app/component/services-section/services-section.component.html
+++ b/src/app/component/services-section/services-section.component.html
@@ -1,11 +1,11 @@
 <div class="text-lg whitespace-break-spaces">
-    <div class="text-2xl font-bold text-blue-600 text-center">
+    <div class="text-2xl sm:text-3xl font-bold text-blue-600 text-center">
         {{ sectionTitle | g2spTranslate }}
     </div>
 
     <ng-content></ng-content>
 
-    <div class="w-full mt-12">
+    <div class="w-full mt-12 sm:mt-28">
         <mat-divider class="w-full"></mat-divider>
     </div>
 </div>
