fix simple section desktop

--- a/src/app/component/services-section/simple-section/simple-section-item/simple-section-item.component.html
+++ b/src/app/component/services-section/simple-section/simple-section-item/simple-section-item.component.html
@@ -1,6 +1,6 @@
-<span class="flex ml-4">
+<span class="flex ml-4 sm:ml-0 sm:justify-start sm:items-center">
     <div class="text-center">
-        <mat-icon class="text-blue-600 scale-[200%]">
+        <mat-icon class="text-blue-600 scale-[200%] sm:scale-[300%] sm:mr-8">
             {{ iconName }}
         </mat-icon>
     </div>
