--- a/src/app/component/services-section/simple-section/simple-section.component.html
+++ b/src/app/component/services-section/simple-section/simple-section.component.html
@@ -1,6 +1,9 @@
 <div class="pt-8">
     <g2sp-services-section [sectionTitle]="'#Simple' | g2spTranslate">
-        <div id="simple" class="flex flex-col justify-center space-y-8 mt-8">
+        <div
+            id="simple"
+            class="flex flex-col justify-center space-y-8 mt-8 sm:text-center sm:mt-12 sm:pl-16 sm:space-y-12 sm:items-center"
+        >
             <g2sp-simple-section-item
                 [description]="'#ServiceSimpleState' | g2spTranslate"
                 iconName="query_stats"
